# ERODE

./: .gitignore  README.md  SycoBench_Project_Plan.docx  analyze.py  config.py  extract_features.py  generate_visuals.py  judge.py  judge_g-eval.py  main.py  metrics.py  pyproject.toml  run_dialogues.py  scenarios_myl15.json  scenarios_template.json  stats_tests.py  timelog.md  validation.py
analysis/: FIGURE_GUIDE.md  PRESENTATION_3MIN.md  SIGNIFICANCE_METHODS.md  metrics_summary.json
analysis/claude_sonnet_judged/: metrics_summary.json
analysis/gemma_4_judged/: metrics_summary.json
analysis/glm_z1_judged/: metrics_summary.json  significance_appendix_pairwise.json  significance_main_baseline_vs_others.json  significance_summary.json
features/: claude_sonnet46_features.jsonl  gemini25flash_features.jsonl  gpt4o_features.jsonl  llama3_70b_features.jsonl
judgments/claude_sonnet_judged/: gemini25flash_judgments.jsonl  gpt4o_judgments.jsonl  llama3_70b_judgments.jsonl  qwen35_9b_judgments.jsonl
judgments/gemma_4_judged/: claude_sonnet46_judgments.jsonl  gemini25flash_judgments.jsonl  gpt4o_judgments.jsonl  (+1 more)
lexicons/: boosters.json  hedges.json
resources/: sycobench_peer_instructions.docx
scenarios/: scenario_debug.json  scenarios_combined.json  scenarios_coulson.json  scenarios_isaac.json
tests/: conftest.py  test_extract_features.py  test_google_history.py  test_judge_geval_unit.py  test_judge_parse.py  test_metrics.py  test_run_dialogue_schema.py  test_significance.py
transcripts/: claude_sonnet46.jsonl  gemini25flash.jsonl  gpt4o.jsonl  llama3_70b.jsonl
(+4 files in other folders)
